<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Karumi.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
  <string name="app_name">Diet Generator</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="protein">Protein</string>
  <string name="vegetable">Vegetable</string>
  <string name="side_vegetables">Side Vegetables</string>
  <string name="carbohydrate">Carbohydrate</string>
</resources>
